<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.ui.Panel.PanelActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- CUSTOM TOPBAR -->
        <LinearLayout
            android:background="@color/dark"
            android:gravity="center_vertical"
            android:id="@+id/custom_topbar"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">


            <FrameLayout
                android:paddingBottom="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:src="@drawable/bridgestone_logo_transparent"
                    android:contentDescription="@string/app_logo" />
            </FrameLayout>

            <ImageView
                android:id="@+id/profile_image"
                android:background="@drawable/circle"
                android:padding="3dp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/baseline_person_24"
                app:tint="#FFF"/>

        </LinearLayout>
        <!-- CUSTOM TOPBAR -->



        <!-- LIST -->

        <LinearLayout
            android:layout_below="@id/custom_topbar"
            android:padding="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swiperefresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ListView
                    android:id="@+id/list_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        </LinearLayout>
        <!-- LIST -->

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_new_request"
            android:src="@drawable/baseline_add_24"
            app:tint="@color/white"
            app:backgroundTint="@color/primary"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/new_request" />

        <LinearLayout
            android:padding="15dp"
            android:id="@+id/empty_message"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:alpha="0.5"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:src="@drawable/baseline_info_24"
                app:tint="@color/white"
                android:contentDescription="@string/info_empty_list" />
            <TextView
                android:text="@string/no_data_yet_click_floating_button_below_to_send_new_request"
                android:textSize="22sp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>